--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -68,4 +68,9 @@
   <!-- Screen recording -->
   <java-symbol type="bool" name="config_enableScreenrecordChord" />
 
+  <!-- IMS -->
+  <java-symbol type="string" name="config_optionalPackageVerifierName" />
+  <java-symbol type="integer" name="config_sms_authorization_timeout_ms" />
+  <java-symbol type="bool" name="config_sms_authorization_enabled" />
+
 </resources>
