--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -130,7 +130,7 @@
     <string name="quick_settings_screenrecord_lq_label">Screenrecord 480p</string>
     <string name="quick_settings_screenrecord_mq_label">Screenrecord 720p</string>
     <string name="quick_settings_screenrecord_hq_label">Screenrecord 720p+</string>
-    
+
     <!-- Expanded Desktop QS Tile -->
     <string name="quick_settings_expanded_desktop_label">Expanded desktop</string>
     <string name="quick_settings_expanded_desktop">Expanded</string>
@@ -143,6 +143,7 @@
     <string name="systemui_theme_style_auto">Automatic</string>
     <string name="systemui_theme_style_light">Light</string>
     <string name="systemui_theme_style_dark">Dark</string>
+    <string name="systemui_theme_style_blackaf">BlackAF</string>
     <string name="quick_settings_theme_tile_title">Accent</string>
     <string name="quick_settings_theme_tile_accent_detail_title">Select color</string>
     <string name="quick_settings_theme_tile_style_detail_title">Select style</string>
